@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: lpoptions.man,v 1.6.2.1 2002/01/02 18:04:53 mike Exp $"
+.\" "$Id: lpoptions.man,v 1.6.2.2 2002/08/09 00:05:29 mike Exp $"
 .\"
 .\"   lpoptions man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -50,11 +50,10 @@ lpoptions \- display or set printer options and defaults
 .I option=value
 ] ... [ -o
 .I option=value
-] -p
+] [ -p
 .I dest[/instance]
 ] -r
 .I option
-]
 .br
 .B lpoptions
 [ -h
@@ -112,5 +111,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2002 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: lpoptions.man,v 1.6.2.1 2002/01/02 18:04:53 mike Exp $".
+.\" End of "$Id: lpoptions.man,v 1.6.2.2 2002/08/09 00:05:29 mike Exp $".
 .\"
